--- a/source/form.html
+++ b/source/form.html
@@ -98,7 +98,7 @@
             <span class="data-form__label">витамины</span>
           </li>
         </ul>
-        <button class="data-form__button" type="button">Отправить заявку</button>
+        <button class="data-form__button button" type="button">Отправить заявку</button>
         <p class="data-form__legend">* - Обязательные поля</p>
       </form>
     </section>
