--- a/source/index.html
+++ b/source/index.html
@@ -11,10 +11,11 @@
 <body class="page__body">
   <header class="page-header">
     <a href="index.html">
-    <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
+      <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
     </a>
     <img class="page-header__title" src="/img/header-title.svg" alt="Заглавие Cat Energy" width="101" height="18">
-    <nav class="main-nav visually-hidden"> <!--Временно скрыл поп-ап меню-->
+    <nav class="main-nav visually-hidden">
+      <!--Временно скрыл поп-ап меню-->
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
@@ -37,22 +38,26 @@
       <div class="product-info__content">
         <h2 class="product-info__title section-title">Функциональное питание для котов</h2>
         <p class="product-info__slogan">занялся собой? займись котом!</p>
-        <a class="product-info__program-selection" href="form.html">подобрать программу</a>
+        <a class="product-info__program-selection button" href="form.html">подобрать программу</a>
       </div>
       <ul class="programs">
         <li class="programs__item">
           <h3 class="programs__title programs__title--slim">Похудение</h3>
-          <p class="programs__description">
-            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
-            Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <div class="programs-description-wrapper">
+            <p class="programs__description">
+              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+              Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          </div>
           <a class="programs__link" href="">каталог slim</a>
         </li>
         <li class="programs__item">
           <h3 class="programs__title programs__title--mass">Набор массы</h3>
-          <p class="programs__description">
-            Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
-            поможет вашему коту нарастить необходимые мышцы!
-          </p>
+          <div class="programs-description-wrapper">
+            <p class="programs__description">
+              Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
+              поможет вашему коту нарастить необходимые мышцы!
+            </p>
+          </div>
           <a class="programs__link" href="">каталог pro</a>
         </li>
       </ul>
@@ -88,35 +93,41 @@
         часов в день. </p>
       <div class="example__stats-wrapper">
         <div class="example__weight-wrapper">
-          <legend class="example__description">снижение веса</legend>
           <p class="example__value">5 КГ</p>
+          <legend class="example__label">снижение<br> веса</legend>
         </div>
         <div class="example__time-wrapper">
-          <legend class="example__description">затрачено времени</legend>
           <p class="example__value">60 ДНЕЙ</p>
+          <legend class="example__label">затрачено<br> времени</legend>
         </div>
       </div>
       <p class="example__finance">Затраты на питание: 15 000 РУБ.</p>
       <div class="example__slider">
-        <img class="slider__cat-image--fat" src="" alt="Фото кота до">
-        <img class="slider__cat-image--slim" src="" alt="Фото кота после">
-        <span class="slider__text">Было</span>
-        <button class="slider__button" type="button"></button>
-        <span class="slider__text">Стало</span>
+        <img class="slider__cat-image--fat" src="/img/before-mobile1.png" alt="Фото кота до">
+        <img class="slider__cat-image--slim visually-hidden" src="" alt="Фото кота после">
+        <div class="slider__wrapper">
+          <span class="slider__text">Было</span>
+          <button class="slider__button" type="button"></button>
+          <span class="slider__text">Стало</span>
+        </div>
       </div>
     </section>
   </main>
   <footer class="page__footer">
     <section class="footer-contacts">
-      <h2 class="visually hidden">Контакты</h2>
+      <h2 class="visually-hidden">Контакты</h2>
       <p class="footer-contacts__invitation">приглашаем к сотрудничеству дилеров!</p>
       <address class="footer-contacts__address">ул. Большая Конюшенная, д. 19/8 <br>
         Санкт-Петербург </address>
-      <img class="contacts__map" src="" alt="карта проезда">
+      <img class="contacts__map" src="/img/map.jpg" alt="карта проезда">
+      <!--Временно подставил просто картинку-->
     </section>
     <section class="footer-media">
-      <h2 class="visually hidden">Медиа и социальные сети</h2>
-      <a class="footer-media__cat-logo" href="index.html"><b>CAT</b> ENERGY</a>
+      <h2 class="visually-hidden">Медиа и социальные сети</h2>
+      <a class="footer-media__logo" href="index.html">
+        <img class="footer-media__logo-title" src="/img/header-title.svg" alt="Баннер Cat Energy" width="128"
+          height="24">
+      </a>
       <ul class="social">
         <li class="social__item">
           <a class="social__link vk-logo" href=""></a>
@@ -128,8 +139,10 @@
           <a class="social__link fb-logo" href=""></a>
         </li>
       </ul>
+      <div class="footer-media__HTML-academy-wrapper">
       <a class="footer-media__HTML-academy-logo"
         href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">HTML Academy</a>
+      </div>
     </section>
   </footer>
 </body>
