Добавляет адаптивность index.html для планшета

--- a/source/form.html
+++ b/source/form.html
@@ -5,143 +5,144 @@
   <meta charset="utf-8">
   <title>Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <!--<link rel="icon" href="favicon.ico">-->
 </head>
 
 <body class="page__body">
-  <header class="page-header page-header__white-background">
-    <a href="index.html">
+  <div class="page__body-wrapper">
+    <header class="page-header page-header__white-background">
       <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
-    </a>
-    <img class="page-header__title" src="/img/header-title.svg" alt="Заглавие Cat Energy" width="101" height="18">
-    <nav class="main-nav visually-hidden">
-      <!--Временно скрыл поп-ап меню-->
-      <button class="main-nav__toggle" type="button">
+      <a class="page-header__title-link" href="index.html"></a>
+      <button class="page-header__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
-      <ul class="main-nav__list">
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="index.html">главная</a>
-        </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--active" href="">каталог продукции</a>
-        </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="form.html">подбор программы</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main class="page__main">
-    <h1 class="main-title visually-hidden">Форма регистрации для подбора программы Cat energy</h1>
-    <section class="bio-data">
-      <h2 class="bio-data__title">Подбор программы</h2>
-      <p class="bio-data__description">Заполните анкету, и мы подберем программу питания для вашего кота</p>
-      <form class="data-form" action="https://echo.htmlacademy.ru/" method="post">
-        <ul class="data-form__list underline-list">
-          <li class="data-form__item">
-            <label class="data-form__label" for="name">Имя:*</label>
-            <input class="data-form__input" type="text" name="name" id="name" placeholder="Барсик">
+      <nav class="main-nav">
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a class="main-nav__link " href="index.html">главная</a>
           </li>
-          <li class="data-form__item">
-            <label class="data-form__label" for="weight">Вес (КГ):*</label>
-            <input class="data-form__input" type="text" name="weight" id="weight" placeholder="7">
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--active" href="catalog.html">каталог продукции</a>
           </li>
-          <li class="data-form__item">
-            <label class="data-form__label" for="age">Возраст (ЛЕТ):</label>
-            <input class="data-form__input" type="text" name="age" id="age" placeholder="7">
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="form.html">подбор программы</a>
           </li>
         </ul>
-        <ul class="data-form__list2 underline-list">
-          <li class="data-form__item">
-            <input class="data-form__radio" type="radio" name="weight-change" value="loss" checked>
-            <span class="data-form__program-label">Похудение</span>
-          </li>
-          <li class="data-form__item">
-            <input class="data-form__radio" type="radio" name="weight-change" value="gain">
-            <span class="data-form__program-label">Набор массы</span>
-          </li>
-          <li class="data-form__item">
-            <input class="data-form__radio" type="radio" name="weight-change" value="unknown">
-            <span class="data-form__program-label">Не знаю (нужен ваш совет)</span>
-          </li>
-        </ul>
-        <div class="data-form__contacts-wrapper">
-          <h3 class="data-form__title">Контактные данные<br> (владельца кота)</h3>
-          <ul class="data-form__list">
+      </nav>
+    </header>
+    <main class="page__main">
+      <h1 class="main-title visually-hidden">Форма регистрации для подбора программы Cat energy</h1>
+      <section class="bio-data">
+        <h2 class="bio-data__title">Подбор программы</h2>
+        <p class="bio-data__description">Заполните анкету, и мы подберем программу питания для вашего кота</p>
+        <form class="data-form" action="https://echo.htmlacademy.ru/" method="post">
+          <ul class="data-form__list underline-list">
             <li class="data-form__item">
-              <label class="data-form__label" for="email">E-mail:*</label>
-              <input class="data-form__input contacts-input" type="email" name="email" id="email"
-                placeholder="KUKLACHEV@GMAIL.COM">
+              <label class="data-form__label" for="name">Имя:*</label>
+              <input class="data-form__input" type="text" name="name" id="name" placeholder="Барсик">
             </li>
             <li class="data-form__item">
-              <label class="data-form__label" for="phone">Телефон:*</label>
-              <input class="data-form__input" type="tel" name="phone" id="phone" placeholder="8 (960) 900-60-90">
+              <label class="data-form__label" for="weight">Вес (КГ):*</label>
+              <input class="data-form__input" type="text" name="weight" id="weight" placeholder="7">
+            </li>
+            <li class="data-form__item">
+              <label class="data-form__label" for="age">Возраст (ЛЕТ):</label>
+              <input class="data-form__input" type="text" name="age" id="age" placeholder="7">
             </li>
           </ul>
-        </div>
-        <div class="data-form__comments-wrapper">
-          <h3 class="data-form__title">Комментарий</h3>
-          <div class="data-form__comments">
-            <textarea class="data-form__comment-field" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
+          <ul class="data-form__list2 underline-list">
+            <li class="data-form__item">
+              <input class="data-form__radio" type="radio" name="weight-change" value="loss" checked>
+              <span class="data-form__program-label">Похудение</span>
+            </li>
+            <li class="data-form__item">
+              <input class="data-form__radio" type="radio" name="weight-change" value="gain">
+              <span class="data-form__program-label">Набор массы</span>
+            </li>
+            <li class="data-form__item">
+              <input class="data-form__radio" type="radio" name="weight-change" value="unknown">
+              <span class="data-form__program-label">Не знаю (нужен ваш совет)</span>
+            </li>
+          </ul>
+          <div class="data-form__contacts-wrapper">
+            <h3 class="data-form__title">Контактные данные<br> (владельца кота)</h3>
+            <ul class="data-form__list">
+              <li class="data-form__item">
+                <label class="data-form__label" for="email">E-mail:*</label>
+                <input class="data-form__input contacts-input" type="email" name="email" id="email"
+                  placeholder="KUKLACHEV@GMAIL.COM">
+              </li>
+              <li class="data-form__item">
+                <label class="data-form__label" for="phone">Телефон:*</label>
+                <input class="data-form__input" type="tel" name="phone" id="phone" placeholder="8 (960) 900-60-90">
+              </li>
+            </ul>
           </div>
+          <div class="data-form__comments-wrapper">
+            <h3 class="data-form__title">Комментарий</h3>
+            <div class="data-form__comments">
+              <textarea class="data-form__comment-field" name="comment"
+                placeholder="Расскажите обо всех повадках кота"></textarea>
+            </div>
+          </div>
+          <div class="data-form__extra-wrapper">
+            <h3 class="data-form__title">Дополнительно</h3>
+            <ul class="data-form__list">
+              <li class="data-form__item">
+                <input class="data-form__checkbox-input" type="checkbox" name="extras" checked>
+                <span class="data-form__checkbox-label">сахарозаменитель</span>
+              </li>
+              <li class="data-form__item">
+                <input class="data-form__checkbox-input" type="checkbox" name="extras">
+                <span class="data-form__checkbox-label">питьевая вода</span>
+              </li>
+              <li class="data-form__item">
+                <input class="data-form__checkbox-input" type="checkbox" name="extras">
+                <span class="data-form__checkbox-label">молоко</span>
+              </li>
+              <li class="data-form__item">
+                <input class="data-form__checkbox-input" type="checkbox" name="extras">
+                <span class="data-form__checkbox-label">витамины</span>
+              </li>
+            </ul>
+            <button class="data-form__button button" type="submit">Отправить заявку</button>
+            <p class="data-form__legend">* - Обязательные поля</p>
+          </div>
+        </form>
+      </section>
+    </main>
+    <footer class="page__footer">
+      <section class="footer-contacts footer-contacts--white-background">
+        <h2 class="visually-hidden">Контакты</h2>
+        <p class="footer-contacts__invitation">приглашаем к сотрудничеству дилеров!</p>
+        <address class="footer-contacts__address">ул. Большая Конюшенная, д. 19/8 <br>
+          Санкт-Петербург </address>
+        <img class="contacts__map" src="/img/map.jpg" alt="карта проезда">
+        <!--Временно подставил просто картинку-->
+      </section>
+      <section class="footer-media">
+        <h2 class="visually-hidden">Медиа и социальные сети</h2>
+        <a class="footer-media__logo" href="index.html">
+          <img class="footer-media__logo-title" src="/img/header-title.svg" alt="Баннер Cat Energy" width="128"
+            height="24">
+        </a>
+        <ul class="social">
+          <li class="social__item">
+            <a class="social__link vk-logo" href=""></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link insta-logo" href=""></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link fb-logo" href=""></a>
+          </li>
+        </ul>
+        <div class="footer-media__HTML-academy-wrapper">
+          <a class="footer-media__HTML-academy-logo"
+            href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">HTML Academy</a>
         </div>
-        <div class="data-form__extra-wrapper">
-          <h3 class="data-form__title">Дополнительно</h3>
-          <ul class="data-form__list">
-            <li class="data-form__item">
-              <input class="data-form__checkbox-input" type="checkbox" name="sugar" checked>
-              <span class="data-form__checkbox-label">сахарозаменитель</span>
-            </li>
-            <li class="data-form__item">
-              <input class="data-form__checkbox-input" type="checkbox" name="sugar">
-              <span class="data-form__checkbox-label">питьевая вода</span>
-            </li>
-            <li class="data-form__item">
-              <input class="data-form__checkbox-input" type="checkbox" name="sugar">
-              <span class="data-form__checkbox-label">молоко</span>
-            </li>
-            <li class="data-form__item">
-              <input class="data-form__checkbox-input" type="checkbox" name="sugar">
-              <span class="data-form__checkbox-label">витамины</span>
-            </li>
-          </ul>
-          <button class="data-form__button button" type="button">Отправить заявку</button>
-          <p class="data-form__legend">* - Обязательные поля</p>
-        </div>
-      </form>
-    </section>
-  </main>
-  <footer class="page__footer">
-    <section class="footer-contacts footer-contacts--white-background">
-      <h2 class="visually-hidden">Контакты</h2>
-      <p class="footer-contacts__invitation">приглашаем к сотрудничеству дилеров!</p>
-      <address class="footer-contacts__address">ул. Большая Конюшенная, д. 19/8 <br>
-        Санкт-Петербург </address>
-      <img class="contacts__map" src="/img/map.jpg" alt="карта проезда">
-      <!--Временно подставил просто картинку-->
-    </section>
-    <section class="footer-media">
-      <h2 class="visually-hidden">Медиа и социальные сети</h2>
-      <a class="footer-media__logo" href="index.html">
-        <img class="footer-media__logo-title" src="/img/header-title.svg" alt="Баннер Cat Energy" width="128"
-          height="24">
-      </a>
-      <ul class="social">
-        <li class="social__item">
-          <a class="social__link vk-logo" href=""></a>
-        </li>
-        <li class="social__item">
-          <a class="social__link insta-logo" href=""></a>
-        </li>
-        <li class="social__item">
-          <a class="social__link fb-logo" href=""></a>
-        </li>
-      </ul>
-      <div class="footer-media__HTML-academy-wrapper">
-        <a class="footer-media__HTML-academy-logo"
-          href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">HTML Academy</a>
-      </div>
-    </section>
-  </footer>
+      </section>
+    </footer>
+  </div>
 </body>
